--- a/newHTML/css/sections.css
+++ b/newHTML/css/sections.css
@@ -425,6 +425,7 @@ nav#bullets>ul>li>a>img:hover{
   -webkit-justify-content:center;
   align-items: center;
   -webkit-align-items: center;
+  background: rgba(0,0,0,0);
 }
 .sliderRef>img{ width: 90% }
 /* SLIDER */
