--- a/newHTML/css/sections.css
+++ b/newHTML/css/sections.css
@@ -3,19 +3,19 @@ nav#bullets{
   position: absolute;
   top: 0;
   right: 0;
-  width: 5%;
+  width: 120px;
   height: 100vh;
   display: none;
-  flex-direction: column;
-  -webkit-flex-direction:column;
+  flex-direction: row;
+  -webkit-flex-direction:row;
   justify-content: center;
   -webkit-justify-content:center;
   align-items: center;
   -webkit-align-items: center;
 }
 nav#bullets>ul{
-  width: 100%;
-  height: 280px;
+  width: 40%;
+  height: 580px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -27,6 +27,13 @@ nav#bullets>ul{
   align-items: center;
   -webkit-align-items: center;
 }
+nav#bullets>ul>li>p{
+  text-align: right;
+  height: 20px;
+  font-size: 0.75rem;
+}
+
+
 nav#bullets>ul>li>a>img{
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
