--- a/newHTML/css/sections.css
+++ b/newHTML/css/sections.css
@@ -32,8 +32,6 @@ nav#bullets>ul>li>p{
   height: 20px;
   font-size: 0.75rem;
 }
-
-
 nav#bullets>ul>li>a>img{
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
@@ -47,6 +45,22 @@ nav#bullets>ul>li>a>img:hover{
   -ms-transform: scale(1.3,1.3);
   -o-transform: scale(1.3,1.3);
   transform: scale(1.3,1.3);
+}
+/* NEW ARROWS */
+nav#arrows{
+  display: none;
+  position: relative;
+  width: 95%;
+  height: 50px;
+}
+nav#arrows>span{
+  display: block;
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+}
+nav#arrows>span>a:last-child{
+  float: right;
 }
 #mainProducto{
   position: relative;
@@ -538,7 +552,13 @@ nav#bullets>ul>li>a>img:hover{
     display: -webkit-flex;
     display: flex;
   }
-  #mainProducto{ height: calc(100vh - 160px) }
+  nav#arrows{
+    display: block;
+  }
+  #mainProducto{
+    height: calc(100vh - 200px);
+    min-height: 500px;
+  }
   #mainProducto>article{
     width: 95%;
     flex-direction: row-reverse;
